--- a/admin.html
+++ b/admin.html
@@ -189,6 +189,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="url-game-system.js"></script>
     <script src="admin.js"></script>
     <script src="admin-auth.js"></script>
 </body>
