--- a/admin.html
+++ b/admin.html
@@ -189,7 +189,7 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="qr-game-system.js"></script>
+    <script src="standalone-game-system.js"></script>
     <script src="admin.js"></script>
     <script src="admin-auth.js"></script>
 </body>
