--- a/student.html
+++ b/student.html
@@ -278,6 +278,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="standalone-game-system.js"></script>
     <script src="student.js"></script>
 </body>
 </html>
