SOLUCIÓN PARA MÚLTIPLES DISPOSITIVOS: Sistema de archivos estáticos
 NUEVO: Sistema que funciona desde cualquier dispositivo
- Crea archivos JSON estáticos que se pueden subir a GitHub
- Los estudiantes acceden desde cualquier PC/celular del mundo
- No depende de localStorage compartido

 INCLUYE:
- file-game-system.js: Sistema completo de archivos estáticos
- Instrucciones detalladas para subir a GitHub Pages
- Soporte automático en admin.js, student.js, index.html
- URLs funcionan desde cualquier red/dispositivo

 RESUELVE: 'código de juego inválido' desde otros dispositivos

--- a/admin.html
+++ b/admin.html
@@ -190,6 +190,7 @@
 
     <script src="script.js"></script>
     <script src="standalone-game-system.js"></script>
+    <script src="file-game-system.js"></script>
     <script src="admin.js"></script>
     <script src="admin-auth.js"></script>
 </body>
