--- a/student.html
+++ b/student.html
@@ -279,6 +279,7 @@
 
     <script src="script.js"></script>
     <script src="standalone-game-system.js"></script>
+    <script src="file-game-system.js"></script>
     <script src="student.js"></script>
 </body>
 </html>
