--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
 
     <script src="script.js"></script>
     <script src="qr-game-system.js"></script>
+    <script src="file-game-system.js"></script>
     <script>
         // Al cargar la página, verificar si viene de un código QR
         document.addEventListener('DOMContentLoaded', function() {
