FIREBASE SETUP AUTOMÁTICO - GRATIS PARA SIEMPRE
 NUEVA FUNCIONALIDAD:
- firebase-setup.html: Configurador visual paso a paso
- Sistema de detección automática de Firebase
- Modal de selección de sistema al iniciar quiz
- Configuración se guarda automáticamente
- Scripts Firebase se cargan dinámicamente

 CARACTERÍSTICAS:
-  GRATIS PARA SIEMPRE (1GB = 500k quizzes)
-  Setup en 15 minutos con guía visual
-  Funciona desde cualquier dispositivo/red
-  Fallback al sistema actual si no hay Firebase
-  Banner informativo en página principal

 OPTIMIZACIONES:
- Auto-limpieza de juegos tras 24h
- Solo datos esenciales para ahorrar transferencia
- Múltiples proyectos disponibles si se necesitan
- Trucos incluidos para maximizar límites gratis

 SOLUCIONA: Código inválido desde otros dispositivos

--- a/index.html
+++ b/index.html
@@ -278,6 +278,15 @@
         
         <!-- Sección principal hero -->
         <div class="hero-section">
+            <!-- Banner Firebase -->
+            <div style="background: linear-gradient(135deg, #4caf50 0%, #45a049 100%); color: white; padding: 15px; border-radius: 10px; margin-bottom: 30px; text-align: center; box-shadow: 0 4px 15px rgba(76, 175, 80, 0.3);">
+                <div style="display: flex; align-items: center; justify-content: center; gap: 10px; flex-wrap: wrap;">
+                    <i class="fas fa-fire" style="font-size: 1.5em;"></i>
+                    <span style="font-weight: 600; font-size: 1.1em;">¡NUEVO! Sistema Firebase configurado</span>
+                    <i class="fas fa-globe" style="font-size: 1.2em;"></i>
+                </div>
+                <p style="margin: 8px 0 0 0; font-size: 0.9em; opacity: 0.9;">Ahora funciona desde cualquier dispositivo y red del mundo</p>
+            </div>
             <h1 class="hero-title">
                 <i class="fas fa-brain"></i>
                 Brain Games Storm
