--- a/admin.html
+++ b/admin.html
@@ -40,6 +40,10 @@
                             <i class="fas fa-broom"></i>
                             Limpiar Todo
                         </button>
+                        <button class="btn btn-warning" onclick="diagnosticarFirebase()" style="background: #ff9800; border-color: #ff9800;">
+                            <i class="fas fa-stethoscope"></i>
+                            Diagnosticar Firebase
+                        </button>
                         <button class="btn btn-secondary" onclick="importQuizFromJson()">
                             <i class="fas fa-upload"></i>
                             Importar JSON
