Implementar sistema Firebase Simple y robusto
- Creado firebase-simple.js como reemplazo más confiable
- Sistema de carga Firebase mejorado con Promises
- Auto-inicialización más robusta
- Función startQuiz actualizada para usar nuevo sistema
- Diagnóstico Firebase simplificado
- Mejor manejo de errores y fallbacks

--- a/admin.html
+++ b/admin.html
@@ -40,7 +40,7 @@
                             <i class="fas fa-broom"></i>
                             Limpiar Todo
                         </button>
-                        <button class="btn btn-warning" onclick="diagnosticarFirebase()" style="background: #ff9800; border-color: #ff9800;">
+                        <button class="btn btn-warning" onclick="diagnosticFirebase()" style="background: #ff9800; border-color: #ff9800;">
                             <i class="fas fa-stethoscope"></i>
                             Diagnosticar Firebase
                         </button>
@@ -148,7 +148,7 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="firebase-game-system.js"></script>
+    <script src="firebase-simple.js"></script>
     <script src="admin.js"></script>
     
     <script>
