Crear sistema completamente limpio y funcional
- Nuevo admin-clean.js: código simplificado y sin errores
- startQuiz completamente reescrito para usar Firebase Simple
- Eliminado código problemático y duplicado
- Función showGameCode implementada correctamente
- Diagnóstico Firebase simplificado y efectivo
- Sistema robusto con fallback local automático
- Importación JSON con creación automática de juegos

--- a/admin.html
+++ b/admin.html
@@ -149,7 +149,7 @@
 
     <script src="script.js"></script>
     <script src="firebase-simple.js"></script>
-    <script src="admin.js"></script>
+    <script src="admin-clean.js"></script>
     
     <script>
         // Event listener para importación de JSON
