--- a/admin.html
+++ b/admin.html
@@ -149,7 +149,7 @@
 
     <script src="script.js"></script>
     <script src="firebase-simple.js"></script>
-    <script src="admin-clean.js"></script>
+    <script src="admin-clean.js?v=2"></script>
     
     <script>
         // Event listener para importación de JSON
