Arreglar modal y navegacion del quiz

--- a/admin.html
+++ b/admin.html
@@ -132,9 +132,13 @@
                         <p class="code-info">Comparte este código con tus estudiantes</p>
                         <div class="modal-actions">
                             <button class="btn btn-outline" onclick="closeStartModal()">Cerrar</button>
-                            <button class="btn btn-primary" onclick="startQuizSession()">
-                                <i class="fas fa-play"></i>
-                                Iniciar Sesión
+                            <button class="btn btn-success" onclick="openStudentPage()" style="background: #28a745; border-color: #28a745;">
+                                <i class="fas fa-users"></i>
+                                Página Estudiantes
+                            </button>
+                            <button class="btn btn-primary" onclick="openControlPage()">
+                                <i class="fas fa-gamepad"></i>
+                                Control Profesor
                             </button>
                         </div>
                     </div>
